# schema-registry-client

./: Pipfile  README.md  setup.cfg
.github/workflows/: test.yml
tests/: test_example.py
