[metadata]
name = schema-registry-client
version = 1.0.0
description = Validation against schemas storing in schema-registry
long_description = file: README.md

[options]
packages = find:

[options.packages.find]
exclude =
    tests

[flake8]
show-source = True
max_line_length = 120
ignore = D100,D104

[isort]
force_sort_within_sections = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool:pytest]
addopts =
    --cov=schema_registry_client
    --cov-report term-missing
